# object-dimensions

./: .gitignore  MakeFile  Makefile  README.md  beta_analysis.sh  config.py  environment.yaml  environment.yml  extract_features.py  main.py  pyproject.toml  run_feature_extraction.py  run_optimization.py  run_tripletization.py  semantic.py  setup.py  train.py  train_2.py  tripletize.py
analyses/: analyse_ll_fixed.py  analyse_ll_gamma.py  compute_rdm.py  cross_correlate_embeddings.py  sparse_code_prediction.py  sparse_code_torch.py
configs/: extract_features.toml  human_dnn.toml  human_dnn_comparison.toml  human_labeling.toml  interpretability.toml  interpretability_analsyses.toml  interpretability_analyses.toml  sample.toml  train_behavior.toml  train_deep.toml  train_dnn.toml  train_spose_behavior.toml  tripletize.toml  tripletize_features.toml
data_generation/: tripletize_adaptive.py
deep_embeddings/: __init__.py  dataset.py  engine.py  loggers.py  main.py  main_tripletize.py  model.py  priors.py  pruning.py  tripletize.py  utils.py
docs/: README.md
experiments/: README.md  analyze_dimension_ratings.py  assign_labels_spose_vice.py  causal_comparison.py  compare_spose_vice_vice.py  dimension_reproducibility.py  find_pruned_dimensions.py  grad_cam.py  inverse_regression.py  nmf.py  optimize_and_sample_stylegan.py  plot_loss_dim.py  reconstruction_accuracy.py  relevance_scores.py  residual_analysis.py  rise.py  rsm_reconstruction_analysis.py  run_comparison.py  run_reproducibility.py  visualization.py  visualize_embedding.py
generate_features/: extract_vgg_features.py  reduce_things_images.py
image_generation/: optimize_and_sample.py
objdim/: __init__.py  sampler.py
object-dimensions/: tripletize.py
object_dimensions/: __init__.py  dataset.py  engine.py  extract_model_features.py  image_dataset.py  latent_predictor.py  loggers.py  logging.py  model.py  pruning.py  (+3 more)
(+190 files in other folders)
